<resources>
    <string name="app_name">Game Project</string>
    <string name="user_name">Enter name</string>
    <string name="play_btn">Play!</string>
    <string name="score_btn">Score</string>
    <string name="back_btn">Back</string>
    <string name="usernameToast">user name:</string>
    <string name="Fieldcantbeempty">Field cant be empty</string>
    <string name="Usernametolong">User name to long</string>
    <string name="start_game_exp">Touch the screen to start</string>
    <string name="lobby">lobby</string>
    <string name="sound">sound</string>
    <string name="score_txt">The Score:</string>
    <string name="game_over_txt">Game Over!</string>
    <string name="finish_btn">Finish</string>
    <string name="play_again_btn">play again</string>
    <string name="diff_txt">Difficulty</string>
    <string name="easy_btn">Easy</string>
    <string name="Medium_btn">Medium</string>
    <string name="hard_btn">Hard</string>
    <string name="MediaPermission">Media Permission</string>
    <string name="name">Name</string>
    <string name="choosedifficulty">Choose Difficulty</string>
    <string name="allow">ALLOW</string>
    <string name="DENIED">DENIED</string>
    <string name="Musiconoff">Music ON/off</string>
</resources>