<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backroundwall">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="348dp"
        android:layout_height="356dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayout"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        app:helperText="Required*"
        app:helperTextTextColor="@color/Red"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:endIconMode="clear_text"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#501967"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/white"
        android:hint="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:maxLength="21"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEdit" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/play_btn"
        android:layout_width="143dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_playbtn"
        android:text="@string/play_btn"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:shapeAppearanceOverlay="@style/leaf" />

    <Button
        android:id="@+id/score_Btn"
        app:backgroundTint="@null"
        android:background="@drawable/shape_playbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:text="@string/score_btn"
        android:textStyle="bold"
        android:textSize="15sp"
        app:shapeAppearanceOverlay="@style/leaf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/difficult"
        android:layout_width="143dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_playbtn"
        android:text="@string/diff_txt"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/play_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:shapeAppearanceOverlay="@style/leaf" />


</androidx.constraintlayout.widget.ConstraintLayout>